// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetPicker matches snapshot 1`] = `
<DocumentFragment>
  <button
    class="mm-box mm-text mm-button-base mm-button-base--size-md asset-picker mm-button-primary mm-text--body-md-medium mm-box--padding-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--align-items-center mm-box--color-primary-inverse mm-box--background-color-transparent mm-box--rounded-pill"
    data-testid="asset-picker-button"
    data-theme="light"
  >
    <span
      class="mm-box mm-text mm-text--inherit mm-box--color-primary-inverse"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--gap-3 mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex"
        >
          <div
            class="mm-box mm-badge-wrapper mm-box--display-inline-block"
          >
            <div
              class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-token mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full"
            >
              <img
                alt="NATIVE TICKER logo"
                class="mm-avatar-token__token-image"
                src="./images/eth_logo.svg"
              />
            </div>
            <div
              class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--circular-top-right"
            >
              <div
                class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-border-muted box--border-style-solid box--border-width-1"
              >
                <img
                  alt="Ethereum Mainnet logo"
                  class="mm-avatar-network__network-image"
                  src="./images/eth_logo.svg"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            aria-describedby="tippy-tooltip-1"
            class=""
            data-original-title="NATIVE TICKER"
            data-tooltipped=""
            style="display: inline;"
            tabindex="0"
          >
            <p
              class="mm-box mm-text asset-picker__symbol mm-text--body-md mm-box--color-text-default"
            >
              NATIVE...
            </p>
          </div>
        </div>
      </div>
    </span>
    <span
      class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-0 mm-box--display-inline-block mm-box--color-icon-default"
      style="mask-image: url('./images/icons/arrow-down.svg');"
    />
  </button>
</DocumentFragment>
`;

exports[`AssetPicker render if disabled 1`] = `
<div>
  <button
    class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-base--disabled asset-picker mm-button-primary mm-button-primary--disabled mm-text--body-md-medium mm-box--padding-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--align-items-center mm-box--color-primary-inverse mm-box--background-color-transparent mm-box--rounded-pill"
    data-testid="asset-picker-button"
    data-theme="light"
    disabled=""
    title="[swapTokenNotAvailable]"
  >
    <span
      class="mm-box mm-text mm-text--inherit mm-box--color-primary-inverse"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--gap-3 mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex"
        >
          <div
            class="mm-box mm-badge-wrapper mm-box--display-inline-block"
          >
            <div
              class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-token mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full"
            >
              s
            </div>
            <div
              class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--circular-top-right"
            >
              <div
                class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-border-default box--border-style-solid box--border-width-1"
              >
                ?
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class=""
            style="display: inline;"
            tabindex="0"
            title=""
          >
            <p
              class="mm-box mm-text asset-picker__symbol mm-text--body-md mm-box--color-text-default"
            >
              symbol
            </p>
          </div>
        </div>
      </div>
    </span>
    <span
      class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-0 mm-box--display-none mm-box--color-icon-default"
      style="mask-image: url('./images/icons/arrow-down.svg');"
    />
  </button>
</div>
`;
